
=======================================================
            WanT code:  Log of Changes 
=======================================================


05 Dec 2008     Documentation updated, according to bugs reported by 
                Caterina Cocchi. (AF) 

02 Jul 2008     bug reported for test08 (nscf_AlH.in used scf flag): fixed.
                (AF & AC)

-------------------------------------------------
Date: 25 Jun 2008    Version: WanT-2.1.1
-------------------------------------------------

25 Jun 2008      bug reported when cutting off the lowest valence states
                 in disentangle.x (Arrigo): fixed. (AC & AF)

19 Jun 2008      qexml.f90 upgraded to support the interface with espresso-4.0. (AF)

16 Jul 2007      Preprocessor bug of NEC SX6 fixed; WORKSROUND7 added to iotk lib,
                 thanks to Guido Roma and Paolo Giannozzi. Few changes to qexml.f90 due to 
                 Paolo Giannozzi. (AF)

-------------------------------------------------
Date: 12 Jul 2007    Version: WanT-2.1.0
-------------------------------------------------

12 Jul 2007      Bug fixed in configure: when not searching for parallel environment,
                 mkl libs were not properly searched. (AF)

10 Jul 2007      Negative b-weights are allowed in bshells_init. (AF)

09 Jul 2007      Workaround to compile on old SGI machines implemented. (AF)

03 Jul 2007      The use of shared libs is the default during configuration. (AF)

23 Jun 2007      Documentation for current.x added (suggested by Matias Nunez); 
                 few typos fixed. Example of the usage of current.x added to test11. 
                 test11 refs updated. (AF)

15 Jun 2007      Test references updated for test02, test08, and test10. 
                 Other minor changes in the test suite. (AF)

13 Jun 2007      Updates in the documentation (CREDITS file added) and in the manual. (AF)

12 Jun 2007      test01 changed: only WFs for valence bands are computed to simplify 